--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,28 +1,14 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/next"
-        },
-        {
-            "src": "api/app.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/api/app.py"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/$1"
-        }
-    ],
+    "framework": "nextjs",
     "functions": {
         "api/app.py": {
             "runtime": "python3.9"
         }
-    }
+    },
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "/api/app.py"
+        }
+    ]
 }
