Fix Vercel API configuration and update index.py for standalone deployment

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,14 @@
 {
     "framework": "nextjs",
     "functions": {
-        "api/app.py": {
+        "api/index.py": {
             "runtime": "python3.9"
         }
     },
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/app.py"
+            "destination": "/api/index.py"
         }
     ]
 }
