--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
     "framework": "nextjs",
     "functions": {
         "api/index.py": {
-            "runtime": "python3.9"
+            "runtime": "@vercel/python"
         }
     },
     "rewrites": [
