--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,3 @@
 {
-    "framework": "nextjs",
-    "functions": {
-        "api/index.py": {
-            "runtime": "@vercel/python"
-        }
-    },
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/index.py"
-        }
-    ]
+    "framework": "nextjs"
 }
